Update button question format in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 喔喔，果然被我抓到錯字了" data-clue-img="https://i.ibb.co/KcJ5cHbf/4-4x.png"></div>
                 </div>
                 <div class="button-area">
-                    <button class="solve-button pixel-text" data-slide="2" data-question="爸媽叫我來教室幫哥哥抄聯絡簿，還叮嚀我要改錯字！但是好像不只聯絡簿上有錯字呢！<br>提示：2534">好多錯字呀！</button>
+                    <button class="solve-button pixel-text" data-slide="2" data-question="爸媽叫我來教室幫哥哥抄聯絡簿，還叮嚀我要改錯字！但是好像不只聯絡簿上有錯字呢！（提示：2534）">好多錯字呀！</button>
                 </div>
             </div>
         </div>
